remove wrong environment File and changed .gitignore File that .env.example get pushed

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@ package-lock.json
 # Optional: .env-Dateien, wenn du keine Secrets tracken willst
 .env
 .env.*
-**/.env*
+**/.env
 
 # ===================================
 # Python
