modified:   Docker Container/paperless-ngx-ai/.env.example 	modified:   Docker Container/paperless-ngx-ai/compose.yaml

--- a/Docker Container/paperless-ngx-ai/compose.yaml
+++ b/Docker Container/paperless-ngx-ai/compose.yaml
@@ -10,9 +10,9 @@ services:
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     environment:
-      POSTGRES_DB: paperless
-      POSTGRES_USER: paperless
-      POSTGRES_PASSWORD: paperless
+      POSTGRES_DB: ${POSTGRES_DB_NAME}
+      POSTGRES_USER: ${POSTGRES_USER_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
   webserver:
     image: ghcr.io/paperless-ngx/paperless-ngx:latest
     restart: unless-stopped
