removed plain Enviroment Variables; added .env.example files;

--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,9 @@ coverage/
 # ===================================
 # /my-sensitive-folder/
 # secrets.json
+
+# ===================================
+# This and That Files which should not be Synced
+# ===================================
+# Example Files
+.README.MD.EXAMPLE
