--- a/Docker Container/stirling-pdf/compose.yaml
+++ b/Docker Container/stirling-pdf/compose.yaml
@@ -12,7 +12,7 @@ services:
     environment:
       - DOCKER_ENABLE_SECURITY=false
       - LANGS=de_DE
-      - SECURITY_CUSTOMGLOBALAPIKEY=346d2b42-7a7d-405b-98ba-3fa8abfc5751
+      - SECURITY_CUSTOMGLOBALAPIKEY=${SECURITY_CUSTOMGLOBALAPIKEY}
       #- DOCKER_ENABLE_SECURITY=true
       #- SECURITY_ENABLE_LOGIN=true
       #- SECURITY_OAUTH2_ENABLED=true
