--- a/Docker Container/diun/compose.yaml
+++ b/Docker Container/diun/compose.yaml
@@ -8,7 +8,7 @@ services:
       - ./data:/data
     environment:
       - DIUN_NOTIF_MAIL_HOST=${EMAIL_Server}
-      - DIUN_NOTIF_MAIL_PORT=465
+      - DIUN_NOTIF_MAIL_PORT=${EMAIL_SERVER_PORT}
       - DIUN_NOTIF_MAIL_USERNAME=${EMAIL_Address}
       - DIUN_NOTIF_MAIL_PASSWORD=${EMAIL_Password}
       - DIUN_NOTIF_MAIL_FROM=${EMAIL_Address}
