--- a/Docker Container/frigate/compose.yaml
+++ b/Docker Container/frigate/compose.yaml
@@ -4,7 +4,7 @@ services:
     privileged: true # this may not be necessary for all setups
     restart: unless-stopped
     stop_grace_period: 30s # allow enough time to shut down the various services
-    image: ghcr.io/blakeblackshear/frigate:${FRIGATE_VERSION}
+    image: ghcr.io/blakeblackshear/frigate:${FRIGATE_VERSION:-stable}
     shm_size: 512mb # update for your cameras based on calculation above
     volumes:
       - /etc/localtime:/etc/localtime:ro
